--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -291,3 +291,12 @@
     }
   }
 }
+
+.projects__row-img-cont {
+  height: auto;
+  aspect-ratio: 138/ 83;
+
+  img {
+    transition: all 5s ease;
+  }
+}
