--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ button {
 textarea {
   resize: none; }
 
+#projects {
+  padding-top: 0;
+}
+
 .heading-primary {
   font-size: 6rem;
   text-transform: uppercase;
